--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,17 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+/* .perspective { */
+/*   perspective: 1000px; */
+/* } */
+/**/
+/* .transform-style-preserve-3d { */
+/*   transform-style: preserve-3d; */
+/* } */
+/**/
+/* .backface-hidden { */
+/*   backface-visibility: hidden; */
+/* } */
+
+
