configuracion e integracion de selects de regiones y comunas en el formulario registro

--- a/app/ui/auth/auth-form.css
+++ b/app/ui/auth/auth-form.css
@@ -97,6 +97,23 @@ form {
   font-weight: 400;
 }
 
+.input-box-register select {
+  width: 100%;
+  padding: 12px 50px 10px 20px;
+  background: #eee;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  color: #333;
+  font-weight: 500;
+}
+
+.input-box-register select::placeholder {
+  color: #888;
+  font-weight: 400;
+}
+
 .input-box-register i {
   position: absolute;
   right: 20px;
