--- a/app/ui/auth/auth-form.css
+++ b/app/ui/auth/auth-form.css
@@ -46,7 +46,7 @@ form {
 
 .input-box {
   position: relative;
-  margin: 30px 0;
+  margin: 35px 0;
 }
 
 .input-box input {
@@ -74,6 +74,47 @@ form {
   font-size: 20px;
   color: #333;
 }
+
+.input-container {
+  position: relative;
+}
+
+.input-container-input {
+  color: #333;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  /* outline: 2px solid #333; */
+  background-color: transparent;
+  transition: outline-color 500ms;
+}
+
+/* .input-container-input:is(:focus, :valid) { */
+/*     outline-color: blueviolet; */
+/* } */
+
+.input-container-label {
+  position: absolute;
+  top: 8px;
+  left: 15px;
+  translate: 10px 8px;
+  color: #888;
+  transition: translate 500ms, scale 500ms;
+}
+
+.input-container-input:focus + .input-container-label,
+.input-container-input:valid + .input-container-label {
+  padding-inline: 10px;
+  translate: -12px -27px;
+  scale: 0.8;
+  /* background-color: #eee; */
+  background-color: white;
+  color: #888;
+  outline: 0.5px solid #888;
+  border-radius: 8px;
+  font-size: 20px;
+}
+
 
 .input-box-register {
   position: relative;
@@ -149,6 +190,20 @@ form {
 .container p {
   font-size: 14.5px;
   margin: 15px 0;
+}
+
+.error-box {
+  margin: 15px 0;
+}
+
+.error-box p {
+  font-size: 13.5px;
+  /* background-color: #ccc; */
+  color: red;
+  padding: 0px 10px;
+  margin: 0px 2px;
+  /* border: 2px solid #ccc; */
+  /* border-radius: 8px; */
 }
 
 .social-icons {
